# glraster

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  display.c  display.h  file_reader.c  file_reader.h  main.c  parser.c  parser.h
